unpackaged/main/default/objects/cmbls__Loan_Template__c/cmbls__Loan_Template__c.object-meta.xml
<CustomObject>
    <label>Loan Template</label>
    <nameField>
        <label>Loan Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loan Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>