unpackaged/main/default/objects/cmbls__Loan_Template__c/fields/cmbls__Additional_Fees__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Additional_Fees__c</fullName>
    <label>Additional Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>