unpackaged/main/default/objects/cmbls__Loan_Template__c/fields/cmbls__Allow_Payments_greater_than_Invoice__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Allow_Payments_greater_than_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if the system allows Payments greater than invoice.</description>
    <inlineHelpText>Determines if the system allows Payments greater than invoice.</inlineHelpText>
    <label>Allow Payments greater than Invoice</label>
    <type>Checkbox</type>
</CustomField>