unpackaged/main/default/objects/cmbls__Loan_Template__c/fields/cmbls__Auto_Settle_Payments_On__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Auto_Settle_Payments_On__c</fullName>
    <inlineHelpText>If field has a value and batch is scheduled, related scheduled or pending payments will update to a settled status on date specified</inlineHelpText>
    <label>Auto Settle Payments On</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>cmbls__Auto_Settle_Payment_Methods</valueSetName>
    </valueSet>
</CustomField>