unpackaged/main/default/objects/cmbls__Loan_Template__c/fields/cmbls__Current_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Current_Interest_Rate__c</fullName>
    <label>Current Interest Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>