unpackaged/main/default/objects/cmbls__Loan_Template__c/fields/cmbls__Day_Payment_is_Applied__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Day_Payment_is_Applied__c</fullName>
    <description>Day of month the Payment should be applied</description>
    <inlineHelpText>Day of month the Payment should be applied</inlineHelpText>
    <label>Day Payment is Applied</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>cmbls__Payment_Frequency__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>cmbls__Possible_days_of_Payment</valueSetName>
    </valueSet>
</CustomField>