unpackaged/main/default/objects/cmbls__Loan_Template__c/fields/cmbls__Days_in_Advance_to_Create_Invoice__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Days_in_Advance_to_Create_Invoice__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Defines how many days in advance the Invoice is created</description>
    <label>Days in Advance to Create Invoice</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>