unpackaged/main/default/objects/cmbls__Loan_Template__c/fields/cmbls__Default__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This Loan Template will be used for Loans of this Record Type if not set at time of creation</description>
    <inlineHelpText>This Loan Template will be used for Loans of this Record Type if not set at time of creation</inlineHelpText>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>