unpackaged/main/default/objects/cmbls__Loan_Template__c/fields/cmbls__Default_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Default_Interest_Rate__c</fullName>
    <inlineHelpText>Interest Rate when loan is in default, used by interest accrual module</inlineHelpText>
    <label>Default Interest Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>