unpackaged/main/default/objects/cmbls__Loan_Template__c/fields/cmbls__Disable_Reserve_Collection_After__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Disable_Reserve_Collection_After__c</fullName>
    <label>Disable Reserve Collection After</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Remaining Payments</fullName>
            </value>
            <value>
                <fullName>Set Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>