unpackaged/main/default/objects/cmbls__Loan_Template__c/fields/cmbls__Disable_Reserve_Number_of_Remaining_PMT__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Disable_Reserve_Number_of_Remaining_PMT__c</fullName>
    <description>An Invoice line item to collect a reserve (if there is a balance) will not be created if the # of remaining payments is less or equal than this number if [Disable Reserve Collection After] = Remaining Payments.</description>
    <inlineHelpText>An Invoice line item to collect a reserve (if there is a balance) will not be created if the # of remaining payments is less or equal than this number if [Disable Reserve Collection After] = Remaining Payments.</inlineHelpText>
    <label>Disable Reserve After # of Remaining PMT</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>