unpackaged/main/default/objects/cmbls__Loan_Template__c/fields/cmbls__Disable_Updates_to_Recurring_Payment_Cmp__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Disable_Updates_to_Recurring_Payment_Cmp__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set a loan to not allow updates to the recurring payment component.</description>
    <inlineHelpText>Set a loan to not allow updates to the recurring payment component.</inlineHelpText>
    <label>Disable Updates to Recurring Payment Cmp</label>
    <type>Checkbox</type>
</CustomField>