unpackaged/main/default/objects/cmbls__Loan_Template__c/fields/cmbls__Enable_Amortization_Schedule__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Enable_Amortization_Schedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Amortization Schedule</label>
    <type>Checkbox</type>
</CustomField>