unpackaged/main/default/objects/cmbls__Loan_Template__c/fields/cmbls__Enable_Estimated_Accruals__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Enable_Estimated_Accruals__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Set to true to enable estimated interest accrual functionality for invoices generated in advance</inlineHelpText>
    <label>Enable Estimated Accruals</label>
    <type>Checkbox</type>
</CustomField>