unpackaged/main/default/objects/cmbls__Loan_Template__c/fields/cmbls__Enable_Invoicing__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Enable_Invoicing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked invoicing is enabled for the repayment.</description>
    <inlineHelpText>If checked invoicing is enabled for the repayment.</inlineHelpText>
    <label>Enable Invoicing</label>
    <type>Checkbox</type>
</CustomField>