unpackaged/main/default/objects/cmbls__Loan_Template__c/fields/cmbls__Enable_Reserve_Collection__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Enable_Reserve_Collection__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable the creation of invoice line items to collect a reserve.</description>
    <inlineHelpText>Enable the creation of invoice line items to collect a reserve.</inlineHelpText>
    <label>Enable Reserve Collection</label>
    <type>Checkbox</type>
</CustomField>