unpackaged/main/default/objects/cmbls__Loan_Template__c/fields/cmbls__Enable_Rule_of_78s__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Enable_Rule_of_78s__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Rule of 78's</label>
    <type>Checkbox</type>
</CustomField>