unpackaged/main/default/objects/cmbls__Loan_Template__c/fields/cmbls__Fee_Group__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Fee_Group__c</fullName>
    <label>Fee Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
                <default>true</default>
                <label>Default</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>