unpackaged/main/default/objects/cmbls__Loan_Template__c/fields/cmbls__Interest_Accrual_Method__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Interest_Accrual_Method__c</fullName>
    <description>Days to Calculate Interest Accrual</description>
    <inlineHelpText>Days to Calculate Interest Accrual</inlineHelpText>
    <label>Interest Accrual Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>365/360</fullName>
                <default>true</default>
                <label>365/360</label>
            </value>
            <value>
                <fullName>30/360</fullName>
            </value>
            <value>
                <fullName>365/365</fullName>
            </value>
            <value>
                <fullName>30/365</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>