unpackaged/main/default/objects/cmbls__Loan_Template__c/fields/cmbls__Interest_Creation_Method__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Interest_Creation_Method__c</fullName>
    <label>Interest Creation Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>From Amortization Schedule</fullName>
                <default>true</default>
                <label>From Amortization Schedule</label>
            </value>
            <value>
                <fullName>From Interest Accrual Object</fullName>
                <isActive>false</isActive>
                <label>From Interest Accrual Object</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>