unpackaged/main/default/objects/cmbls__Loan_Template__c/fields/cmbls__INV_Principal_from_Amortization_Schedule__c.field-meta.xml
<CustomField>
    <fullName>cmbls__INV_Principal_from_Amortization_Schedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>INV Principal from Amortization Schedule</label>
    <type>Checkbox</type>
</CustomField>