unpackaged/main/default/objects/cmbls__Loan_Template__c/fields/cmbls__Invoice_Interest_in_Advance__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Invoice_Interest_in_Advance__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When enabled with ‘Enable Interest Accruals’, invoices generated will include interest billed in a month in advance.</inlineHelpText>
    <label>Invoice Interest in Advance</label>
    <type>Checkbox</type>
</CustomField>