unpackaged/main/default/objects/cmbls__Loan_Template__c/fields/cmbls__Is_Variable_Rate__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Is_Variable_Rate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Variable Rate</label>
    <type>Checkbox</type>
</CustomField>