unpackaged/main/default/objects/cmbls__Loan_Template__c/fields/cmbls__Monthly_Withdrawal_Date__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Monthly_Withdrawal_Date__c</fullName>
    <label>Monthly Withdrawal Date</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>cmbls__Possible_days_of_Payment</valueSetName>
    </valueSet>
</CustomField>