unpackaged/main/default/objects/cmbls__Loan_Template__c/fields/cmbls__Months_to_Collect_Reserve__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Months_to_Collect_Reserve__c</fullName>
    <label>Months to Collect Reserve</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>