unpackaged/main/default/objects/cmbls__Loan_Template__c/fields/cmbls__Number_of_Days_Before_First_Payment__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Number_of_Days_Before_First_Payment__c</fullName>
    <label># of Days Before First Payment</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>