unpackaged/main/default/objects/cmbls__Loan_Template__c/fields/cmbls__Number_of_Payments_for_Reserve__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Number_of_Payments_for_Reserve__c</fullName>
    <inlineHelpText>If [Reserve Amount to Collect Method] is set to "Based on Monthly Payments", this is the # of loan payments to collect for the total reserve amount</inlineHelpText>
    <label># of Payments To Collect for Reserve</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>