unpackaged/main/default/objects/cmbls__Loan_Template__c/fields/cmbls__Origination_Fee__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Origination_Fee__c</fullName>
    <description>Amount that is being withheld for upfront fees</description>
    <inlineHelpText>Amount that is being withheld for upfront fees</inlineHelpText>
    <label>Origination Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>