unpackaged/main/default/objects/cmbls__Loan_Template__c/fields/cmbls__Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Payment_Amount__c</fullName>
    <description>Amount of incremental payments</description>
    <inlineHelpText>Amount of incremental payments</inlineHelpText>
    <label>Installment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>