unpackaged/main/default/objects/cmbls__Loan_Template__c/fields/cmbls__Payment_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Payment_Due_Date__c</fullName>
    <label>Payment Due Date</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>cmbls__Payment_Frequency__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>cmbls__Possible_days_of_Payment</valueSetName>
    </valueSet>
</CustomField>