unpackaged/main/default/objects/cmbls__Loan_Template__c/fields/cmbls__Payments_Only_on_Weekdays__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Payments_Only_on_Weekdays__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payments Only on Weekdays</label>
    <type>Checkbox</type>
</CustomField>