unpackaged/main/default/objects/cmbls__Loan_Template__c/fields/cmbls__Status__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Pause</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Defaulted</fullName>
            </value>
            <value>
                <fullName>Write Off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>