unpackaged/main/default/objects/cmbls__Loan_Template__c/fields/cmbls__Sum_Payment_Balance__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Sum_Payment_Balance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, Principal and Interest Balances will be calculated using the values from the payment records, rather than a formula using the factor rate and current balance.</description>
    <inlineHelpText>If checked, Principal and Interest Balances will be calculated using the values from the payment records, rather than a formula using the factor rate and current balance.</inlineHelpText>
    <label>Sum Payment Balance</label>
    <type>Checkbox</type>
</CustomField>