unpackaged/main/default/objects/cmbls__Loan_Template__c/fields/cmbls__Term_Months_Input__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Term_Months_Input__c</fullName>
    <label>Term (Months)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>